fix docker-compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     build:
       context: .
       dockerfile: server.Dockerfile
+    command: db
     depends_on:
       - db
     ports:
